--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 markdown: kramdown
 
 author_image: /assets/images/IMG_2089.jpg
+![Makayla L](/assets/images/IMG_2089.jpg)
